--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -170,7 +170,7 @@
   </div>
   <a class="idea_content" (click)="(!idea.report.id)? goToView($event): ''">
     <div class="statement" [innerHTML]="idea.statement"></div>
-    <button class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected}" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
+    <button class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected, disabled: !canVote()}" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
       <div class="btn_medium_plain btn_like">
         <div class="icon">
           <ng-container *ngIf="!this.idea.votes.up.selected">
