--- a/src/app/ideation/components/ideabox/ideabox.component.html
+++ b/src/app/ideation/components/ideabox/ideabox.component.html
@@ -57,6 +57,43 @@
           </cos-initials>
         </div>
       </div>
+      <div class="vertical_line_separator"></div>
+      <div class="like_wrap" [ngClass]="{selected: this.idea.votes.up.selected}">
+        <button class="btn_idea_like" [ngClass]="{disabled: !canVote()}" (click)="doIdeaVote(1)">
+          <!--div class="tooltip_item" tooltip [noIcon]="true">
+            <div class="content_title">Help on its way</div>
+            <div class="content_description">Help text coming soon! Please tell us what help you were looking for.
+            </div>
+          </!--div-->
+          <div *ngIf="!this.idea.votes.up.selected">
+            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="path-1-inside-1_13347_120913" fill="white">
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M4 8.23052C4 5.75213 5.9675 4 8.00006 4C10.0327 4 12 5.7523 12 8.23052C12 9.98094 11.3561 10.9778 10.7695 11.886C10.3399 12.5512 9.941 13.1688 9.84826 14L6.15595 14C6.06314 13.1686 5.66341 12.551 5.23288 11.8858C4.64514 10.9776 4 9.9808 4 8.23052ZM8 17C9.10457 17 10 16.1046 10 15L6 15C6 16.1046 6.89543 17 8 17Z" />
+              </mask>
+              <path
+                d="M10.7695 11.886L12.4496 12.9711V12.9711L10.7695 11.886ZM9.84826 14V16H11.6375L11.8359 14.2218L9.84826 14ZM6.15595 14L4.1683 14.2219L4.36679 16H6.15595V14ZM5.23288 11.8858L3.55384 12.9724H3.55384L5.23288 11.8858ZM10 15H12V13H10V15ZM6 15V13H4V15H6ZM8.00006 2C4.85817 2 2 4.65233 2 8.23052H6C6 6.85193 7.07683 6 8.00006 6V2ZM14 8.23052C14 4.65264 11.1422 2 8.00006 2V6C8.9232 6 10 6.85195 10 8.23052L14 8.23052ZM12.4496 12.9711C13.0764 12.0006 14 10.5894 14 8.23052L10 8.23052C10 9.37245 9.63586 9.95499 9.08949 10.8009L12.4496 12.9711ZM11.8359 14.2218C11.8691 13.9242 11.9911 13.6809 12.4496 12.9711L9.08949 10.8009C8.68867 11.4215 8.01288 12.4133 7.86059 13.7782L11.8359 14.2218ZM6.15595 16L9.84826 16L9.84826 12H6.15595V16ZM3.55384 12.9724C4.01339 13.6825 4.13519 13.9253 4.1683 14.2219L8.1436 13.7781C7.9911 12.412 7.31343 11.4195 6.91192 10.7991L3.55384 12.9724ZM2 8.23052C2 10.5905 2.92593 12.0022 3.55384 12.9724L6.91192 10.7991C6.36434 9.95303 6 9.37113 6 8.23052H2ZM8 15L8 19C10.2091 19 12 17.2091 12 15L8 15ZM6 17H10V13L6 13V17ZM8 15H4C4 17.2091 5.79086 19 8 19L8 15Z"
+                fill="#2C3B47" mask="url(#path-1-inside-1_13347_120913)" />
+              <rect x="14.0098" y="3.19531" width="2" height="1" rx="0.5" transform="rotate(135 14.0098 3.19531)"
+                fill="#2C3B47" />
+              <rect x="8.5" y="0.5" width="2" height="1" rx="0.5" transform="rotate(90 8.5 0.5)" fill="#2C3B47" />
+              <rect x="2.69727" y="2.48828" width="2" height="1" rx="0.5" transform="rotate(45 2.69727 2.48828)"
+                fill="#2C3B47" />
+              <rect y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
+              <rect x="14" y="8" width="2" height="1" rx="0.5" fill="#2C3B47" />
+            </svg>
+          </div>
+          <div *ngIf="this.idea.votes.up.selected">
+            <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M8 0.5C8.27614 0.5 8.5 0.723858 8.5 1V2C8.5 2.27614 8.27614 2.5 8 2.5C7.72386 2.5 7.5 2.27614 7.5 2V1C7.5 0.723858 7.72386 0.5 8 0.5ZM13.6567 3.54984C13.852 3.35458 13.852 3.038 13.6567 2.84274C13.4614 2.64747 13.1449 2.64747 12.9496 2.84274L12.2425 3.54984C12.0472 3.7451 12.0472 4.06169 12.2425 4.25695C12.4377 4.45221 12.7543 4.45221 12.9496 4.25695L13.6567 3.54984ZM8.00006 4C5.9675 4 4 5.75213 4 8.23052C4 9.9808 4.64514 10.9776 5.23288 11.8858C5.66341 12.551 6.06314 13.1686 6.15595 14H9.84826C9.941 13.1688 10.3399 12.5512 10.7695 11.886C11.3561 10.9778 12 9.98094 12 8.23052C12 5.7523 10.0327 4 8.00006 4ZM10 15C10 16.1046 9.10457 17 8 17C6.89543 17 6 16.1046 6 15H10ZM3.05033 2.84281C2.85507 2.64755 2.53849 2.64755 2.34322 2.84281C2.14796 3.03807 2.14796 3.35466 2.34322 3.54992L3.05033 4.25702C3.24559 4.45229 3.56218 4.45229 3.75744 4.25702C3.9527 4.06176 3.9527 3.74518 3.75744 3.54992L3.05033 2.84281ZM0 8.5C0 8.22386 0.223858 8 0.5 8H1.5C1.77614 8 2 8.22386 2 8.5C2 8.77614 1.77614 9 1.5 9H0.5C0.223858 9 0 8.77614 0 8.5ZM14.5 8C14.2239 8 14 8.22386 14 8.5C14 8.77614 14.2239 9 14.5 9H15.5C15.7761 9 16 8.77614 16 8.5C16 8.22386 15.7761 8 15.5 8H14.5Z"
+                fill="#2C3B47" />
+            </svg>
+
+          </div>
+        </button>
+        <a class="like_counter_wrap" (click)="doShowVotersList()" [innerHTML]="idea.votes.up.count"></a>
+      </div>
       <ng-container *ngIf="(Auth.loggedIn$ | async)">
         <div class="vertical_line_separator"></div>
         <button class="btn_small_plain icon"
@@ -170,7 +207,7 @@
   </div>
   <a class="idea_content" (click)="(!idea.report.id)? goToView($event): ''">
     <div class="statement" [innerHTML]="idea.statement"></div>
-    <button class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected, disabled: !canVote()}" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
+    <!--button class="btn_like_wrap" [ngClass]="{selected: this.idea.votes.up.selected, disabled: !canVote()}" (click)="$event.preventDefault();$event.stopPropagation();doIdeaVote(1);">
       <div class="btn_medium_plain btn_like">
         <div class="icon">
           <ng-container *ngIf="!this.idea.votes.up.selected">
@@ -204,12 +241,13 @@
       <div class="like_counter_wrap" [innerHTML]="idea.votes.up.count">
 
       </div>
-    </button>
+    </!--button-->
   </a>
   <div class="idea_footer">
     <div class="date">{{idea.createdAt | date: 'YYYY-MM-dd HH:mm'}}</div>
     <div class="replies_count">
-      <a translate="COMPONENTS.IDEABOX.REPLIES" [translateParams]="{count: idea.replies.count}" (click)="(!idea.report.id)? goToView($event): ''"></a>
+      <a translate="COMPONENTS.IDEABOX.REPLIES" [translateParams]="{count: idea.replies.count}"
+        (click)="(!idea.report.id)? goToView($event): ''"></a>
     </div>
   </div>
 </a>
