--- a/src/app/ideation/components/ideabox/ideabox.component.scss
+++ b/src/app/ideation/components/ideabox/ideabox.component.scss
@@ -86,6 +86,33 @@
       .btn_small_plain {
         padding: 0;
       }
+
+
+    .like_wrap {
+      display: flex;
+      align-items: center;
+
+      .btn_idea_like {
+        width: 32px;
+        height: 32px;
+        border-radius: 40px;
+        position: relative;
+        &:hover {
+          background-color: var(--color-surfaces);
+        }
+      }
+
+      .like_counter_wrap {
+        padding: 8px;
+        color: var(--color-text);
+      }
+      &.selected {
+        font-weight: 600;
+        .btn_idea_like {
+          background-color: var(--color-ideation);
+        }
+      }
+    }
     }
     .idea_header_right {
       display: flex;
@@ -211,4 +238,10 @@
       }
     }
   }
+}
+.tooltip_item {
+  position: absolute;
+  left:0;
+  width: 100%;
+  height: 100%;
 }
