--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1702,7 +1702,16 @@ tour-item-template {
 .tooltip {
   display: inline-block;
   margin-left: 3px;
-  position: relative;
+  position: absolute;
+
+  &.no_icon {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+  }
+
   .tooltip_icon {
     svg {
       position: relative;
@@ -1710,17 +1719,23 @@ tour-item-template {
     }
   }
 
-  .arrow {
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-bottom: 6px solid var(--color-text);
-    left: 2px;
-    bottom: -4px;
+  .arrow_up {
     position: absolute;
+    top: 14px;
+    z-index: 9999999999;
   }
+
+  .arrow_down {
+    position: absolute;
+    bottom: 8px;
+    z-index: 9999999999;
+  }
+
   .tooltip_container {
-    position: relative;
-    margin-top: 7px;
+    position: absolute;
+    margin-top: 8px;
+    width: max-content;
+    height: max-content;
 
     @include mixins.mobile {
       width: calc(100% - 16px);
