Remove link from markdown editor

--- a/src/app/ideation/components/idea/idea-dialog.component.html
+++ b/src/app/ideation/components/idea/idea-dialog.component.html
@@ -292,7 +292,7 @@
         <div class="replies_header" *ngIf="showReply">
           <div class="form_wrap">
             <idea-reply-form id="reply_form" [(showReply)]="showReply" [topicId]="topic.id" [ideationId]="ideation.id"
-              [ideaId]="idea.id" [(notification)]="notification"></idea-reply-form>
+              [ideaId]="idea.id"></idea-reply-form>
           </div>
         </div>
         <div class="replies_content_wrap">
